# alicia_flexible_grasp_supervisor

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: camera.yaml  grasp_params.yaml  gui_config.yaml  handeye.yaml  joint_limits.yaml  safety_limits.yaml  tactile.yaml
docs/: ros_topics.md
gui/: main_gui.py
gui/widgets/: camera_widget.py  cartesian_control_widget.py  grasp_task_widget.py  joint_control_widget.py  log_widget.py  robot_state_widget.py  tactile_widget.py
launch/: bringup.launch  full_system.launch  grasp_system.launch  gui.launch  moveit.launch  sensors.launch
msg/: GraspState.msg  ObjectPose.msg  SafetyState.msg  TactileFrame.msg  TactileState.msg
rviz/: grasp_system.rviz
scripts/: camera_node.py  compliant_gripper_controller.py  data_logger_node.py  grasp_task_node.py  handeye_transform_node.py  motion_gateway_node.py  perception_node.py  safety_monitor_node.py  system_bringup_check.py  tactile_skin_node.py
src/alicia_flexible_grasp/grasp/: compliant_grasp.py  grasp_pose_generator.py  grasp_state_machine.py  grasp_verifier.py
src/alicia_flexible_grasp/robot/: cartesian_controller.py  gripper_commander.py  joint_commander.py  moveit_planner.py
src/alicia_flexible_grasp/tactile/: tactile_filter.py  tactile_sdk_wrapper.py
src/alicia_flexible_grasp/utils/: config_loader.py  transform_utils.py
src/alicia_flexible_grasp/vision/: depth_projector.py  object_detector.py  pose_estimator.py  realsense_manager.py
srv/: SetForceParams.srv  SetTargetPose.srv  StartGrasp.srv  StopGrasp.srv
tests/: test_object_pose.py  test_tactile_read.py
