<?xml version="1.0"?>
<package format="2">
  <name>alicia_flexible_grasp_supervisor</name>
  <version>0.2.0</version>
  <description>Supervisor GUI, tactile sensing, RealSense vision and compliant grasping for Synria Alicia-D robot arm.</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>message_runtime</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <exec_depend>moveit_commander</exec_depend>
</package>
